Bug 156170 - "Avoid endnotes." issue is not hyperlinked to jump to corresponding anchor
Summary: "Avoid endnotes." issue is not hyperlinked to jump to corresponding anchor
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:24.2.0 target:7.6.0.2
Keywords: accessibility
Depends on:
Blocks: Accessibility-Check
  Show dependency treegraph
 
Reported: 2023-07-05 15:53 UTC by stragu
Modified: 2023-07-26 07:58 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description stragu 2023-07-05 15:53:10 UTC
Steps:
1. Open Writer.
2. Insert -> Footnote and Endnote -> Endnote

"Avoid endnotes." appears in the Accessibility Check sidebar deck. It should be hyperlinked to jump to the anchor.

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: d74344f6cae0cf1c12f08249c8f49be1374fb98f
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 1 Michael Weghorn 2023-07-06 06:35:55 UTC
Confirmed.

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: c61126450a9ff833574edc3883b47673def13d0c
CPU threads: 12; OS: Linux 6.1; UI render: default; VCL: kf5 (cairo+xcb)
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: threaded
Comment 2 Commit Notification 2023-07-25 09:07:36 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/fa61fb2b49327de8583505bdadf58067773409bd

tdf#156170 - A11Y - Fix "Avoid endnotes." issue is not hyperlinked

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2023-07-26 07:58:07 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/da13bde10eb80c5a0bfb4390d49ea7d0ea5eb05e

tdf#156170 - A11Y - Fix "Avoid endnotes." issue is not hyperlinked

It will be available in 7.6.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.