tdf#156170 - A11Y - Fix "Avoid endnotes." issue is not hyperlinked

to jump to corresponding anchory.

Change-Id: Id01f66b8d75d85b4618ca30873bf3dc4951b74d8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154882
Tested-by: Jenkins
Reviewed-by: Balazs Varga <balazs.varga.extern@allotropia.de>